Additions :

* Added initial support for mantra.

* Added a new ModelCache class, for reading and writing hierarchical models in a random access fashion, backed by IndexedIO storage. Bounds for every level of the hierarchy are computed automatically during writing. Also added an ABCToMDC op to IECoreAlembic - this allows conversion of Alembic archives to ModelCache format.

Improvements :

* Added repr() functionality to NullObject and ObjectVector bindings.

* Added CameraController::project() method.

* IECoreArnold::Renderer::shader() now supports the creation of networks of shaders.

7.7.2 :

Bug Fixes :

* Modified behaviour of shouldSave method of ParameterisedHolder, which controls which attributes are saved to file
  - previously:
	* GenericAttributes which would cause crashes skipped
	* everything else forced to always be written
  - now
	* GenericAttributes which would cause crashes skipped
	* attributes in the AttributeNameToParameterMap forced to always be written
    * anything else uses default Maya behaviour ( write only if changed from default )
 ( This was motivated by attributes created by mtoa, which would be ignored if unused on normal Maya objects, but were always saved on Cortex objects, and then caused problems if mtoa was not present on load )

7.7.1 :

Bug Fixes :

* Fixed Bug in MtoA Translator that was initialising shaders on instances when the arnold node was Null

7.7.0 :

Improvements :

* Changed the ClassVectorParameterUI Float and Double parameter's precision to 4 (from 2).

* Bound MurmurHash assignment operator as Python copyFrom() method.

* Added python bindings for IECoreGL ToGLMeshPrimitiveConverter, ToGLCurvesPrimitiveConverter and ToGLPointsPrimitiveConverter.

* Added a ToGLConverter::create() factory method, for automatically creating a converter given an Object.

* The Arnold output driver now supports point and vector pixel types.

* MPlayDisplayDriver now deals with the case where the RGB plane is not the first one.
